k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubepulse-ingress
  namespace: kubepulse
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: kubepulse-backend
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubepulse-frontend
            port:
              number: 80
